[tool.poetry]
name = "daily-coding-problems"
version = "0.1.0"
description = "Practice coding problems"
authors = ["Rohit Rawat <rohitrawat@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.701.0"
pytest = "^4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
