[tool.poetry]
name = "daily-coding-problems"
version = "0.1.0"
description = "Practice coding problems"
authors = ["Rohit Rawat <rohitrawat@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.770"
pytest = "^5.4.3"
pylint = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
